# retinaface-header-cuda

./: .gitignore  README.md  anchors.txt  conf.npy  faceDetector_540_960_byte.onnx  faceDetector_540_960_byte_sim.onnx  faceDetector_540_960_byte_t.onnx  faceDetector_540_960_dyn_sim.onnx  landms.npy  loc.npy  onnx_verify.py  prior_540_960.npy  setup.py  test.py  test_decode.py  test_detect.py  test_engine.py  test_index.py  trt_test_image.py
cpp/: CMakeLists.txt  README.md  export.cpp  gen_anchors.py  infer.cpp  test  test.cu
csrc/: engine.cpp  engine.h  extensions.cpp
csrc/cuda/: decode.cu  decode.h  nms.cu  nms.h  utils.h
csrc/plugins/: DecodePlugin.h  NMSPlugin.h
deepstream/: CMakeLists.txt  README.md  aligner.cpp  base64.cpp  ds_config_1vid.txt  infer_config_batch1.txt  main.cpp  nvdsparsebbox_retinaface.cpp  proto_test.py  utils.cpp
deepstream/configs/: ds_config_1vid.txt  dstensor_sgie_config.txt  dstest2_tracker_config.txt  infer_config_batch1.txt
deepstream/gst-nvinfer/: Makefile  gstnvinfer.cpp  gstnvinfer.h  gstnvinfer_allocator.cpp  gstnvinfer_allocator.h  gstnvinfer_impl.h  gstnvinfer_meta_utils.cpp  gstnvinfer_property_parser.cpp  gstnvinfer_property_parser.h
deepstream/include/: base64.h  utils.h
deepstream/includes/: aligner.h  utils.h
deepstream/nvdsincludes/: nvdsinfer.h  nvdsmeta.h  nvdsmeta_schema.h
deepstream/nvmsgconv/: Makefile  nvmsgconv.cpp
deepstream/protos/: CMakeLists.txt  protobuf.proto  protobuf_pb2.py
pretrained/: faceDetector_180_320_batch_sim.onnx  faceDetector_180_320_batch_sim_arm.plan  faceDetector_540_960_batch.onnx
test/: main.cpp
